# hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup-hooks.sh  setup.cfg  setup.py
commitlint/: .pre-commit-hooks.yaml  LICENSE  README.md  SECURITY.md  index.rst  main.py  setup.py
commitlint/test/: test_main.py
